force-app/main/default/objects/Subscription__c/fields/HasOptedOutProcessing__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&apos;t Process</label>
    <type>Checkbox</type>
</CustomField>