force-app/main/default/objects/Subscription__c/fields/uniqueid__c.field-meta.xml
<CustomField>
    <fullName>uniqueid__c</fullName>
    <label>uniqueid</label>
    <length>79</length>
    <type>Text</type>
</CustomField>