force-app/main/default/objects/Subscription__c/fields/updatedInIndividual__c.field-meta.xml
<CustomField>
    <fullName>updatedInIndividual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>updatedInIndividual</label>
    <type>Checkbox</type>
</CustomField>